# fast-repo

./: README.md  fast-repo.py  pyproject.toml  requirements.txt
fast-repo/: fast-repo.py
fast_repo/: main.py
fast_repo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
