[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoFast"
version = "0.1.3"
description = "CLI tool to create GitHub repos quickly"
authors = [
    {name="Faisal Abusharar", email="voidycodes@gmail.com"}
]
dependencies = [
    "rich",
    "typer",
]

[project.scripts]
fast-repo = "fast_repo.main:main"


